--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fullscreen Image</title>
+  <title>QOQPORTFOLIO </title>
+    <!-- 网站标签页图标 -->
+  <link rel="icon" href="mylogo.png" type="image/png">
+
   <!-- 引入 p5.js (本地版本) -->
   <script src="p5.min.js"></script>
   <!-- 引入我们自己的脚本 -->
