--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Background 2 with Buttons</title>
+  <title>CONTENTS</title>
+
+    <link rel="icon" href="mylogo.png" type="image/png">
+
   <!-- 引入 p5.js (本地版本) -->
   <script src="p5.min.js"></script>
   <!-- 引入新的脚本用于显示背景2和按钮 -->
