--- a/work1.html
+++ b/work1.html
@@ -2,9 +2,11 @@
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8" />
-    <title>Work 1</title>
+    <title>The fault line of time</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- p5.js（CDN）-->
+       <link rel="icon" href="mylogo.png" type="image/png">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <style>
       html, body {
