--- a/work4.html
+++ b/work4.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work 4 - PDF 查看器</title>
+    <link rel="icon" href="mylogo.png" type="image/png">
+    <title>Brand</title>
     <style>
         body {
             margin: 0;
