--- a/work5.html
+++ b/work5.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Work 5 - 视频和单张图</title>
+    <link rel="icon" href="mylogo.png" type="image/png">
+    <title>MT. EYE</title>
     <style>
         body {
             margin: 0;
