--- a/work1.html
+++ b/work1.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- p5.js（CDN）-->
        <link rel="icon" href="mylogo.png" type="image/png">
+    
+    <!-- 预加载视频文件以加快加载速度 -->
+    <link rel="preload" href="8(1).mp4" as="video" type="video/mp4" crossorigin="anonymous">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <style>
