--- a/work3.html
+++ b/work3.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="mylogo.png" type="image/png">
+    <!-- 预加载视频文件以加快加载速度 -->
+     <link rel="preload" href="11月15日 (2)(1)(1).mp4" as="video" type="video/mp4" crossorigin="anonymous">
     <title>Beneath Fear</title>
     <style>
         body {
